tests/fixtures/invalid/pow_dict_bool_bool.py
# Cannot call pow() with Dict[str, int], Bool, Bool
x = pow({"a": 1}, True, True)
